Content and Style changes
Change-Id: Ie7d542875c3008344454f21de62b94b8b4b6d576

--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1>
     <small>Content</small><br>
-    <span class="blue">
+    <span class="blue mainheading">
       Requests for<br>
       Alterations &amp; Takedown
     </span>
@@ -46,7 +46,7 @@
     <p>We change people through conversation, not through censorship.</p>
     <footer>
       <img src="http://lorempixel.com/100/100/people/">
-      <p>Jay Z, Musician (2010)</p>
+      <p>Jay Z,<br /> Musician (2010)</p>
     </footer>
   </blockquote>
 
@@ -64,9 +64,45 @@
     <p>A well-functioning copyright law carefully balances the interests of the public in access to expressive works and ... the interests of copyright owners in being compensated for uses of their works.</p>
     <footer>
       <img src="http://lorempixel.com/100/100/people/">
-      <p>Pamuela Samuelson, UC Berkeley Professor of Law & Co-Director of Berkeley Center for Law & Technology  (2010)</p>
+      <p>Pamuela Samuelson, <br /> Director of Berkeley Center for Law &amp; Technology (2010)</p>
     </footer>
   </blockquote>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <h3>
+      <small>Story</small><br>
+      French DCRI Case<br>
+      <small>March 2013</small>
+    </h3>
+    <hr />
+    <p>In March 2013, a French intelligence agency called the DCRI detained a French Wikipedia user and threatened him with severe criminal penalties if he did not use his administrative rights to delete from French Wikipedia information about a military base that the DCRI deemed classified. The supposedly classified information was actually publicly available because the military had provided interviews and a tour of the base to local reporters. We defended the Wikipedia user involved and fought to keep the content up on French Wikipedia. Read more.</p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <h3>
+      <small>Story</small><br>
+      Tasmanian Aboriginal Language Case<br>
+      <small>July 2012</small>
+    </h3>
+    <hr />
+    <p>In July 2012, an Aboriginal language center demanded the removal of the English Wikipedia article on "palawa kani", claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to prevent people from using an entire language, nor should it be used to prevent general discussion about the language. Additionally, such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse -- activities that Wikimedia serves to promote.</p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <h3>
+      <small>Story</small><br>
+      Monkey Picture<br>
+      <small>January 2014</small>
+    </h3>
+    <hr />
+    <p>In July 2011, an award-winning photographer left his camera unattended in a national park in North Sulawesi, Indonesia. A female crested black macaque monkey got ahold of the camera and took a series of pictures, including some self-portraits. The pictures were featured in an online newspaper article and eventually posted to Commons. We received a takedown request in January 2014 based on the argument that the photographer owned the copyright to the photographs. Believing that the photographs are in the public domain, we denied the request.</p>
+  </div>
 </div>
 
 <div class="clear"></div>
