--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,8 @@
 <div class="jumbotron">
 	<h1>
-		Wikimedia Foundation
-		<span class="blue">
-			<br>Transparency
+		<span class="name">Wikimedia Foundation</span>
+		<span class="blue mainheading">
+			Transparency
 			<br>Report
 		</span>
 	</h1>
@@ -12,7 +12,7 @@
 	<p class="lead">
 		<a target="_blank" href="http://wikimediafoundation.org/wiki/Vision">Our mission</a> is to provide access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about our users or to delete or alter content on our projects. Some are legitimate. Some are not.
 	<br /> <br />
-		Through this transparency report, we hope to shed some light on the requests we receive and how we respond to them. We are proud that transparency is one of the core values of the Wikimedia movement.
+		Through this transparency report, we hope to shed some light on the requests we recieve and how we respond to them.
 	</p>
 </div>
 
@@ -28,7 +28,7 @@
 
 <div class="col-md-4">
 	<a href="content/" class="story">
-		<h3><small>Section</small><br>Content Alteration &amp; Takedown</h3>
+		<h3><small>Section</small><br>Content Alteration &amp; Takedown Requests</h3>
 		<hr/>
 		<p>
 			<img class="icon" src="/images/content.svg">
@@ -38,7 +38,7 @@
 
 <div class="col-md-4">
 	<a href="faq/" class="story">
-		<h3><small>Section</small><br>Frequently Asked Questions</h3>
+		<h3><small>Section</small><br>Frequently Asked<br />Questions</h3>
 		<hr/>
 		<p>
 			<img class="icon" src="/images/faq.svg">
