--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -1,9 +1,9 @@
 <div class="jumbotron">
 	<h1>
 		<small>Privacy</small><br>
-		<span class="blue">
-			User Information<br>
-			Requests
+		<span class="blue mainheading">
+			Requests for <br />
+			User Information
 		</span>
 	</h1>
 </div>
@@ -12,7 +12,7 @@
 	<section class="scorecard">
 		<h2>Scorecard</h2>
 		<dl>
-			<dt>Number of Requests Complied</dt>
+			<dt>Number of Times Information was Produced</dt>
 			<dd>1</dd>
 		</dl>
 	</section>
@@ -21,7 +21,7 @@
 		<h2>Scorecard</h2>
 		<dl>
 			<dt>Percentage of User Accounts Actually Affected</dt>
-			<dd>0.002%</dd>
+			<dd>0.000001<br/>352498%</dd>
 		</dl>
 	</section>
 
@@ -29,7 +29,7 @@
 
 <div class="col-md-9">
 	<p class="lead">
-	Freedom of speech is essential to the Wikimedia movement -- our projects cannot flourish in an ecosystem where individuals cannot speak freely.
+	Freedom of speech is essential to the Wikimedia movement – our projects cannot flourish in an ecosystem where individuals cannot speak freely.
 	</p>
 
 	<p>Our users trust us to protect their identities and we take this responsibility seriously. We collect very little nonpublic information about users and retain that information for a short period of time.</p>
@@ -49,50 +49,29 @@
 	</blockquote>
 </div>
 
+<div class="col-md-12">
+	<div class="analytics">
+		<h2>Compared to other companies, we received relatively few requests.</h2>
+		<ul class="tabs">
+			<li><a href="#">All</a></li>
+			<li><a href="#">July 2013</a></li>
+			<li><a href="#">January 2014</a></li>
+			<li><a href="#">July 2014</a></li>
+		</ul>
+		<div id="compare_graph" class="bubble_graph"></div>
+		<span id="complied_requests">
+			<input type="checkbox" id="complied_requests_check">
+			<label for="complied_requests_check">% of requests complied</label>
+		</span><br>
+	</div>
+
+</div>
 <div class="clear"></div>
-<br><br><br><br><br><br>
-
-<div class="col-md-4">
-	<div class="story">
-		<h3>
-			<small>Story</small><br>
-			French DCRI Case<br>
-			<small>March 2013</small>
-		</h3>
-		<hr />
-		<p>In March 2013, a french intelligence agency called the DCRI detained a French Wikipedia user and threatened him with severe criminal penalties if he did not use his administrative rights to delete from French Wikipedia information about a military base that the DCRI deemed classified. The supposedly classified information was actually publicly available because the military had provided interviews and a tour of the base to local reporters. We defended the Wikipedia user involved and fought to keep the content up on French Wikipedia. Read more.</p>
-	</div>
-</div>
-
-<div class="col-md-4">
-	<div class="story">
-		<h3>
-			<small>Story</small><br>
-			Tasmanian Aboriginal Language Case<br>
-			<small>July 2012</small>
-		</h3>
-		<hr />
-		<p>In July 2012, an aboriginal language center demanded the removal of the English Wikipedia article on "palawa kani", claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to prevent people from using an entire language, nor should it be used to prevent general discussion about the language. Additionally, such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse -- activities that Wikimedia serves to promote.</p>
-	</div>
-</div>
-
-<div class="col-md-4">
-	<div class="story">
-		<h3>
-			<small>Story</small><br>
-			Monkey Picture<br>
-			<small>January 2014</small>
-		</h3>
-		<hr />
-		<p>In July 2011, an award-winning photographer left his camera unattended in a national park in North Sulawesi, Indonesia. A female crested black macaque monkey got ahold of the camera and took a series of pictures, including some self-portraits. The pictures were featured in an online newspaper article and eventually posted to Commons. We received a takedown request in January 2014 based on the argument that the photographer owned the copyright to the photographs. Believing that the photographs are in the public domain, we denied the request.</p>
-	</div>
-</div>
-
-
+<br/> <br/>
 
 <div class="col-md-12">
 	<div class="analytics">
-		<h2>Requests for User Data</h2>
+		<h2>Requests for User Data, and how we responded.</h2>
 		<ul class="tabs">
 			<li><a href="#">All</a></li>
 			<li><a href="#">July 2013</a></li>
@@ -116,21 +95,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-	<div class="analytics">
-		<h2>How We Compare to Other Companies</h2>
-		<ul class="tabs">
-			<li><a href="#">All</a></li>
-			<li><a href="#">July 2013</a></li>
-			<li><a href="#">January 2014</a></li>
-			<li><a href="#">July 2014</a></li>
-		</ul>
-		<div id="compare_graph" class="bubble_graph"></div>
-		<span id="complied_requests">
-			<input type="checkbox" id="complied_requests_check">
-			<label for="complied_requests_check">% of requests complied</label>
-		</span><br>
 	</div>
 
 </div>
