--- a/source/faq.html.erb
+++ b/source/faq.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<h1>
 		<span class="blue">
-			Frequently Asked Questions
+			Frequently<br /> Asked Questions
 		</span>
 	</h1>
 </div>
