--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -57,9 +57,9 @@
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="#">Data Retention</a></li>
-						<li><a href="#">Terms</a></li>
+						<li><a href="http://wikimediafoundation.org/wiki/Privacy_policy">Privacy Policy</a></li>
+						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines">Data Retention Guidelines</a></li>
+						<li><a href="http://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a></li>
 					</ul>
 				</div>
 
