--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -48,11 +48,20 @@ h2 {
 
 .container .jumbotron {
 	padding-left: 10px;
+	padding-top: 26px;
+	padding-bottom: 34px;
+	margin-bottom: 42px;
 	background: transparent;
 	font-family: serif;
 	border-bottom: 1px solid $gray;
 	color: $gray;
 	border-radius: 0;
+
+	.mainheading {
+		display: block;
+		margin-top: -5px;
+		line-height: 64px;
+	}
 
 	h1 {
 		margin: 0;
@@ -63,12 +72,19 @@ h2 {
 			font-weight: 400;
 			text-transform: uppercase;
 		}
+
+		.name {
+			font-size: 34px;
+		}
 	}
 }
 
+
+
 .lead {
 	font: 30px serif;
-	margin-bottom: 38px;
+	margin-bottom: 22px;
+	line-height: 40px;
 }
 
 footer {
@@ -109,8 +125,8 @@ footer {
 	h3 {
 		margin: 0;
 		font-family: serif;
-		font-size: 25px;
-		color: #000;
+		font-size: 22px/28px;
+		color: #333;
 
 		small {
 			font: 12px sans-serif;
@@ -122,7 +138,7 @@ footer {
 
 	.icon {
 		display: block;
-		width: 200px;
+		width: 160px;
 		margin: 0 auto;
 	}
 }
@@ -147,12 +163,12 @@ blockquote {
 	font: 140px serif;
 	line-height: 50px;
 	margin-top: 60px;
-	width: 510px;
+	width: 590px;
 	margin-bottom: 60px;
 
 	p {
 		color: #000;
-		font: 30px serif;
+		font: 26px/36px serif;
 		font-weight: normal;
 		width: 400px;
 		margin-left: 80px;
@@ -204,7 +220,7 @@ blockquote {
 
 
 .scorecard {
-	margin: 10px 0;
+	margin: 5px 0 10px 0;
 	border-top: 7px solid $blue;
 	background: #F0F2F4;
 	padding: 20px;
@@ -221,7 +237,7 @@ blockquote {
 		margin: 0;
 
 		dt {
-			font: 25px serif;
+			font: 22px/28px serif;
 		}
 
 		dd {
