Content and style changes
Change-Id: Ib131fcea556c674ee3f7f426b7e42b78659500d0

--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -1,31 +1,48 @@
 <div class="jumbotron">
   <h1>
-    <small>Content</small><br>
     <span class="blue mainheading">
-      Requests for<br>
-      Alterations &amp; Takedown
+      Requests for Content<br>
+      Alteration &amp; Takedown
     </span>
   </h1>
 </div>
 
 <div class="col-md-3">
   <section class="scorecard">
-    <h2>Scorecard</h2>
+    <h2>January – June 2014</h2>
     <dl>
-      <dt>Number of requests complied</dt>
+      <dt>Total Number of Requests</dt>
+      <dd>90</dd>
+    </dl>
+  </section>
+
+  <br><br>
+
+  <section class="scorecard">
+    <h2>January – June 2014</h2>
+    <dl>
+      <dt>Number of Requests Granted</dt>
       <dd>0</dd>
     </dl>
   </section>
 
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+<br /><br />
   <section class="scorecard">
-    <h2>Scorecard</h2>
+    <h2>January – June 2014</h2>
     <dl>
-      <dt>Percentage of DMCA Takedown Requests Complied</dt>
-      <dd>38.4%</dd>
+      <dt>Total Number of DMCA Takedown Requests</dt>
+      <dd>10</dd>
     </dl>
   </section>
+  <br><br>
+  <section class="scorecard">
+    <h2>January – June 2014</h2>
+    <dl>
+      <dt>Percentage of Requests Granted</dt>
+      <dd>40%</dd>
+    </dl>
+  </section>
+
 </div>
 
 <div class="col-md-9">
