--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -24,7 +24,7 @@
 						</button>
 						<a class="navbar-brand" href="/">
 							<img src="/images/logo.png" />
-							Wikimedia Transparency Report
+							Wikimedia Foundation Transparency Report
 						</a>
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
@@ -43,7 +43,7 @@
 				<div class="col-md-5">
 					<a href="/">
 						<img src="/images/logo.png">
-						Wikimedia Transparency Report
+						Wikimedia Foundation Transparency Report
 					</a>
 				</div>
 
