--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -1,27 +1,26 @@
 <div class="jumbotron">
 	<h1>
-		<small>Privacy</small><br>
 		<span class="blue mainheading">
 			Requests for <br />
-			User Information
+			User Data
 		</span>
 	</h1>
 </div>
 
 <div class="col-md-3">
 	<section class="scorecard">
-		<h2>Scorecard</h2>
+		<h2>January – June 2014</h2>
 		<dl>
-			<dt>Number of Times Information was Produced</dt>
-			<dd>1</dd>
+			<dt>Total Number of Requests</dt>
+			<dd>10</dd>
 		</dl>
 	</section>
 	<br><br>
 	<section class="scorecard">
-		<h2>Scorecard</h2>
+		<h2>January – June 2014</h2>
 		<dl>
-			<dt>Percentage of User Accounts Actually Affected</dt>
-			<dd>0.000001<br/>352498%</dd>
+			<dt>Percentage of Times Information Produced</dt>
+			<dd>10%</dd>
 		</dl>
 	</section>
 
@@ -54,14 +53,14 @@
 		<h2>Compared to other companies, we received relatively few requests.</h2>
 		<ul class="tabs">
 			<li><a href="#">All</a></li>
-			<li><a href="#">July 2013</a></li>
-			<li><a href="#">January 2014</a></li>
-			<li><a href="#">July 2014</a></li>
+			<li><a href="#">July 2012 - June 2013</a></li>
+			<li><a href="#">July - December 2013</a></li>
+			<li><a href="#">January - June 2014</a></li>
 		</ul>
 		<div id="compare_graph" class="bubble_graph"></div>
 		<span id="complied_requests">
 			<input type="checkbox" id="complied_requests_check">
-			<label for="complied_requests_check">% of requests complied</label>
+			<label for="complied_requests_check">% of times information was produced</label>
 		</span><br>
 	</div>
 
@@ -71,19 +70,19 @@
 
 <div class="col-md-12">
 	<div class="analytics">
-		<h2>Requests for User Data, and how we responded.</h2>
+		<h2>Requests for User Data, and How We Responded.</h2>
 		<ul class="tabs">
 			<li><a href="#">All</a></li>
-			<li><a href="#">July 2013</a></li>
-			<li><a href="#">January 2014</a></li>
-			<li><a href="#">July 2014</a></li>
+			<li><a href="#">July 2012 - June 2013</a></li>
+			<li><a href="#">July - December 2013</a></li>
+			<li><a href="#">January - June 2014</a></li>
 		</ul>
 		<div class="graph">
 			<div class="row">
 				<div class="col-md-4">
 					<h3>Request Type</h3>
 					<div id="bar_graph_by_type" class="bar_graph_horizontal"></div>
-					<h3>Requests Complied?</h3>
+					<h3>Information Produced?</h3>
 					<div>
 						<p class="legend legend_yes">Yes</p>
 						<p class="legend legend_no">No</p>
