--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@
 
 <div class="col-md-4">
 	<a href="privacy/" class="story">
-		<h3><small>Section</small><br>Requests for <br />User Data</h3>
+		<h3>Requests for <br />User Data</h3>
 		<hr/>
 		<p>
 			<img class="icon" src="/images/userdata.svg">
@@ -28,7 +28,7 @@
 
 <div class="col-md-4">
 	<a href="content/" class="story">
-		<h3><small>Section</small><br>Content Alteration &amp; Takedown Requests</h3>
+		<h3>Requests for Content Alteration &amp; Takedown</h3>
 		<hr/>
 		<p>
 			<img class="icon" src="/images/content.svg">
@@ -38,12 +38,21 @@
 
 <div class="col-md-4">
 	<a href="faq/" class="story">
-		<h3><small>Section</small><br>Frequently Asked<br />Questions</h3>
+		<h3>Frequently Asked<br />Questions</h3>
 		<hr/>
 		<p>
 			<img class="icon" src="/images/faq.svg">
 		</p>
 	</a>
 </div>
-
+<div class="col-md-12">
+<blockquote>
+    <p>Sunlight is said to be the best of disinfectants.</p>
+    <footer>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Brandeisl.jpg">
+      <p>Louis Brandeis,<br /> Former Associate Justice of <br /> the Supreme Court of <br /> the United States (1914)
+</p>
+    </footer>
+  </blockquote>
+</div>
 <div class="clear">&nbsp;</div>
