Minor style changes
Change-Id: I4434b226dd6d41a37af228c67949a867c2f6487d

--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -1,7 +1,7 @@
 @import 'variables.css.scss';
 
 .analytics {
-	background: #f0f2f4;
+	background: #ffffff;
 	border-top: 6px solid $blue;
 	margin: 40px 0;
 
