--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -223,7 +223,7 @@ blockquote {
 .scorecard {
 	margin: 5px 0 10px 0;
 	border-top: 7px solid $blue;
-	background: #fffff;
+	background: #ffffff;
 	padding: 20px;
 
 	h2 {
