Fix type size for scorecard
Change-Id: Ice499fab1d00ff9523e0e30b31fbb26b957aae02

--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -39,7 +39,7 @@
     <h2>January – June 2014</h2>
     <dl>
       <dt>Percentage of Requests Granted</dt>
-      <dd>40%</dd>
+      <dd>40<small>%</small></dd>
     </dl>
   </section>
 
