--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -20,7 +20,7 @@
 		<h2>January – June 2014</h2>
 		<dl>
 			<dt>Percentage of Times Information Produced</dt>
-			<dd>10%</dd>
+			<dd>10<small>%</small></dd>
 		</dl>
 	</section>
 
