Fix spacing of quotes
Change-Id: If4dc9112df2275aaae00603b4765284424f4b29e

--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -63,7 +63,7 @@
     <p>We change people through conversation, not through censorship.</p>
     <footer>
       <img src="http://lorempixel.com/100/100/people/">
-      <p>Jay Z,<br /> Musician (2010)</p>
+      <p>Jay Z<small>Musician (2010)</small></p>
     </footer>
   </blockquote>
 
@@ -81,7 +81,7 @@
     <p>A well-functioning copyright law carefully balances the interests of the public in access to expressive works and ... the interests of copyright owners in being compensated for uses of their works.</p>
     <footer>
       <img src="http://lorempixel.com/100/100/people/">
-      <p>Pamuela Samuelson, <br /> Director of Berkeley Center for Law &amp; Technology (2010)</p>
+      <p>Pamuela Samuelson<small>Director of Berkeley Center for Law & Technology (2010)</small></p>
     </footer>
   </blockquote>
 </div>
