--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -50,8 +50,7 @@
     <p>Sunlight is said to be the best of disinfectants.</p>
     <footer>
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Brandeisl.jpg">
-      <p>Louis Brandeis,<br /> Former Associate Justice of <br /> the Supreme Court of <br /> the United States (1914)
-</p>
+      <p>Louis Brandeis<small> Former Associate Justice of the Supreme Court of the United States (1914)</small></p>
     </footer>
   </blockquote>
 </div>
