Add full bleed image to story
Change-Id: I794fbcda780755a8d8e4f262ce7ed7a597fdeff9

--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -100,6 +100,7 @@
 
 <div class="col-md-4">
   <div class="story">
+    <img src="/images/story_aboriginal.png">
     <h3>
       <small>Story</small><br>
       Tasmanian Aboriginal Language Case<br>
