--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -46,6 +46,60 @@
 			<p>Oscar Wilde, Writer & Poet (1891)</p>
 		</footer>
 	</blockquote>
+
+	<div id="summary_table" class="story">
+		<h3>
+			<small>July 2012 - June 2014</small><br />
+			Summary
+		</h3>
+		<hr />
+		<table>
+			<tr>
+				<td>Total Number of Requests</td>
+				<td>56</td>
+			</tr>
+			<tr>
+				<td>Information Produced For</td>
+				<td>8</td>
+			</tr>
+			<tr>
+				<td>Informal Non-Government Requests</td>
+				<td>28</td>
+			</tr>
+			<tr>
+				<td>Informal Government Requests</td>
+				<td>15</td>
+			</tr>
+			<tr>
+				<td>Civil Subpoenas</td>
+				<td>8</td>
+			</tr>
+			<tr>
+				<td>Criminal Subpoena</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>Administrative Subpoena</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Search Warrants</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Court Orders</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>User Accounts Potentially Affected</td>
+				<td>69</td>
+			</tr>
+			<tr>
+				<td>User Accounts Actually Affected</td>
+				<td>11</td>
+			</tr>
+		</table>
+	</div>
 </div>
 
 <div class="col-md-12">
