--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -155,6 +155,19 @@ footer {
 		width: 160px;
 		margin: 0 auto;
 	}
+
+	table {
+		margin: 20px;
+		width: 95%;
+
+		tr {
+			height: 40px;
+
+			& > td:last-child {
+				text-align: right;
+			}
+		}
+	}
 }
 
 .blackout {
