Fix flag position and style
Change-Id: I588681e11cd60a7e22812a7d39715eeb9fa9275d

--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -79,6 +79,11 @@
 }
 
 .bar_graph_horizontal, .bar_graph_vertical {
+	line.left-line {
+		stroke: #ccc;
+		stroke-width: 1px;
+	}
+
 	rect.blue_bars {
 		fill: $blue;
 	}
