Add 'Show All' link near graphs
Change-Id: I4b21f29773c1f0058300f6b4ccfd0486e918be49

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -134,7 +134,7 @@
 		<div class="graph">
 			<div class="row">
 				<div class="col-md-4">
-					<h3>Request Type</h3>
+					<h3>Request Type<a id="request_type_show_all" href="javascript: void(0)">Show All</a></h3>
 					<div id="bar_graph_by_type" class="bar_graph_horizontal"></div>
 					<h3>Information Produced?</h3>
 					<div>
@@ -143,7 +143,7 @@
 					</div>
 				</div>
 				<div class="col-md-7">
-					<h3>By Country</h3>
+					<h3>By Country<a id="by_country_show_all" href="javascript: void(0)">Show All</a></h3>
 					<div id="bar_graph_by_country" class="bar_graph_horizontal"></div>
 				</div>
 			</div>
