--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -43,6 +43,12 @@
 		font-size: 20px;
 		margin: 20px;
 		margin-bottom: 0;
+
+		a {
+			font-size: 15px;
+			margin-left: 5px;
+			font-family: sans-serif;
+		}
 	}
 
 	#complied_requests {
